release: bump version to 0.42.0